tests/NormalTests/paczka1/small_fuzzy/89422529.err
Error in line 2: DZGk S194 53,6
Error in line 7: S9 A722 70,5
Error in line 6: jLUNbqv7 S194 1,2
